<resources>
    <string name="app_name">ofat</string>
    <string name="side_menu_open">Главное меню</string>
    <string name="side_menu_close">ofat</string>
    <string name="about">О программе</string>
    <string name="login">Войти</string>
    <string name="exit">Выйти</string>
    <string name="login_hint">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="main_header">Приветствие</string>
    <string name="goods">Работа с товаром</string>
    <string name="points">Работа с точками</string>
    <string name="workers">Кадры</string>
    <string name="providers">Поставщики</string>
    <string name="finances">Бухгалтерия</string>
    <string name="users">Добавить пользователя</string>
    <string name="usersHeader">Добавление пользователя</string>
    <string name="firstName">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="middleName">Отчество</string>
    <string name="birthDate">Дата рождения</string>
    <string name="email">E-mail</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="addUser">Добавить</string>
    <string name="backToMenu">Назад</string>
    <string name="picture">OK</string>
    <string name="scanner">Сканер</string>
    <string name="foundGood_header">Информация о товаре</string>
    <string name="goodNameTitle">Наименование:</string>
    <string name="goodIdTitle">Номер:</string>
    <string name="goodBarCodeTitle">Штрих код:</string>
    <string name="goodBuyPackTitle">Ед.измерения(по закупке):</string>
    <string name="quantityPerPackTitle">Количество в уп.(по закупке):</string>
    <string name="sellPackagingTitle">Ед. измерения:</string>
    <string name="buyQuantityTitle">Количество (по закупке):</string>
    <string name="sellQuantityTitle">Продано:</string>
    <string name="storedTitle">Остаток:</string>
    <string name="manufacturerTitle">Производитель:</string>
    <string name="buyPriceTitle">Цена закупочная:</string>
    <string name="priceTitle">Цена:</string>
    <string name="discountTitle">Скидка:</string>
    <string name="goodIncomeDateTitle">Дата прихода:</string>
    <string name="goodCommentsTitle">Примечание:</string>
    <string name="foundListHeader">Найдено:</string>
    <string name="goodNameTitleLabel">Наименование товара:</string>
    <string name="debt">Долг:</string>
    <string name="transaction_date">Дата:</string>
    <string name="transaction_time">Время:</string>
    <string name="transaction_quantity">Количество:</string>
    <string name="partnerLabel">Партнер:</string>
    <string name="tx_type_label">Тип:</string>
    <string name="tx_comment_label">Комментарии:</string>
    <string name="accept">Подтвердить</string>
    <string name="transaction_header">Транзакция</string>
    <string name="erase">Очистить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tx_status">Статус:</string>
    <string name="accepted">С подтверждением</string>
    <string name="not_accepted">Без подтверждения</string>
    <string name="delayed">Отложенная</string>
    <string name="search_result">Результат поиска</string>
    <string name="transaction_title">Транзакция</string>
    <string name="main">Главная</string>
    <string name="sell">Продажа</string>
    <string name="quantityInput">Введите количество:</string>
    <string name="cart">Корзина</string>
    <string name="price_per_unit">Цена за ед.</string>
    <string name="quanSTX">Кол-во</string>
    <string name="total">Итого</string>
    <string name="good_table_name">Наименование</string>
    <string name="data_enter">Ввод данных</string>
    <string name="good_groups">Работа с группами товаров</string>
    <string name="addGroup">Создать группу товаров</string>
    <string name="editGroup">Редактировать группу товаров</string>
    <string name="create_template">Создать шаблон</string>
    <string name="apply_template">Применить шаблон</string>
    <string name="group_label">Группа:</string>
    <string name="query_good">Выбрать товар</string>
    <string name="query_date_from">Дата с</string>
    <string name="query_date_to">Дата по</string>
    <string name="query_user">Выбрать пользователя</string>
    <string name="select_group">Выбрать группу</string>
    <string name="create">Создать</string>
    <string name="debit">Дебит:</string>
    <string name="credit">Кредит:</string>
    <string name="saldo">Сальдо:</string>
    <string name="tx_number">Номер транзакции</string>
    <string name="txPrice">Цена</string>
    <string name="quantity">Количество:</string>
    <string name="tx_seller">Продавец:</string>

</resources>
