<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity = "center"
            android:visibility="gone"
            android:id="@+id/progressBarTN"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:text="@string/transaction_header"/>

<!--    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spinner_margin">
        <TextView
                android:id="@+id/transaction_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:hint="@string/tx_type_label"
                android:layout_margin="@dimen/spinner_margin"
                app:errorEnabled="true"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/tx_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </LinearLayout>-->

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_good"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goodNameTitleLabel"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transaction_good_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_price"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priceTitle"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_quantity"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_quantity"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_debt"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/debt"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/debt_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_date"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_date"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_time"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transaction_time">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_time_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_partner"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/partnerLabel">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/partner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transaction_comment"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tx_comment_label"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transaction_comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="2"
                  android:orientation="horizontal"
                  android:layout_gravity="bottom">
        <Button
                android:id="@+id/btTx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"/>
        <Button
                android:id="@+id/btCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/backToMenu"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>