<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:context=".ui.main.transaction.CartFragment">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
                android:id="@+id/cart_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="38sp"
                android:text="@string/cart"/>
        <TableLayout android:id="@+id/cartList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:shrinkColumns="*"
                     android:stretchColumns="*">
            <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                <TextView
                        android:id="@+id/ppu"
                        android:text="@string/price_per_unit"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:textColor="@color/colorPrimaryDark">
                </TextView>

                <TextView
                        android:id="@+id/quan"
                        android:text="@string/quanSTX"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:textColor="@color/colorPrimaryDark" >
                </TextView>

                <TextView
                        android:id="@+id/total"
                        android:text="@string/total"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:textColor="@color/colorPrimaryDark">
                </TextView>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>