<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".ui.main.transaction.TxStatusTypeFragment"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spinner_margin">
        <TextView
                android:id="@+id/transaction_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:hint="@string/tx_type_label"
                android:layout_margin="@dimen/spinner_margin"
                app:errorEnabled="true"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/tx_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/tx_status"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accepted"
                    android:id="@+id/accepted" />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_accepted"
                    android:id="@+id/not_accepted" />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delayed"
                    android:id="@+id/delayed" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal" android:layout_marginTop="5dp"
                  android:layout_marginStart="0dp"
                  android:gravity="end" android:paddingTop="5dp">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_tx_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>